fixed the gap issue on the bottom of the contact form with the footer

--- a/beni-serramenti/src/Components/BackgroundImg/backgroundImg.css
+++ b/beni-serramenti/src/Components/BackgroundImg/backgroundImg.css
@@ -17,6 +17,20 @@
   text-align: center;
 }
 
+@media (max-width:991px) {
+  .middle {
+    visibility: hidden;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
+
 .bckgImg:hover .image {
   opacity: 0.3;
 }
